err/cndate.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/cndate'...
Compiling './lib/python3.5/site-packages/cndate/chinese_parse1_my.py'...
***   File "./lib/python3.5/site-packages/cndate/chinese_parse1_my.py", line 19
    m = re.search(ur"([0-9零一二两三四五六七八九十]+年)?([0-9一二两三四五六七八九十]+月)?([0-9一二两三四五六七八九十]+[号日])?([上下午晚早]+)?([0-9零一二两三四五六七八九十百]+[点:\.时])?([0-9零一二三四五六七八九十百]+分?)?([0-9零一二三四五六七八九十百]+秒)?", msg)
                                                                                                                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cndate/cnparser.py'...
***   File "./lib/python3.5/site-packages/cndate/cnparser.py", line 10
    print cnparse(u'2015-1-21 11:52 PM')
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cndate/convert_test.py'...
***   File "./lib/python3.5/site-packages/cndate/convert_test.py", line 14
    print '-', line
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cndate/parse_object.py'...
***   File "./lib/python3.5/site-packages/cndate/parse_object.py", line 24
    print self.s
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cndate/parser_collections.py'...
***   File "./lib/python3.5/site-packages/cndate/parser_collections.py", line 16
    m = re.search(ur"(民国)(\d+)(年)", s)
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cndate/process.py'...
***   File "./lib/python3.5/site-packages/cndate/process.py", line 62
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cndate/test.py'...
***   File "./lib/python3.5/site-packages/cndate/test.py", line 10
    print u'开始...'
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cndate/utils.py'...
***   File "./lib/python3.5/site-packages/cndate/utils.py", line 105
    m = re.search(ur"([0-9零一二两三四五六七八九十 ]+年)?([0-9一二两三四五六七八九十 ]+月)?([0-9一二两三四五六七八九十 ]+[号日])?([上下午晚早 ]+)?([0-9零一二两三四五六七八九十百 ]+[点:\.时])?([0-9零一二三四五六七八九十百 ]+分?)?([0-9零一二三四五六七八九十百 ]+秒)?", s)
                                                                                                                                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cndate-1.2.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/dateutils'...
Compiling './lib/python3.5/site-packages/dateutils/dateadd.py'...
***   File "./lib/python3.5/site-packages/dateutils/dateadd.py", line 56
    print dt.strftime(args.format)
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutils/datediff.py'...
***   File "./lib/python3.5/site-packages/dateutils/datediff.py", line 40
    print __import__(args.unit)(end_dt, start_dt, **kwargs)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dateutils-0.6.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
